--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.3",
+    "body-parser": "^1.20.0",
+    "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -35,6 +43,9 @@
       ">0.2%",
       "not dead",
       "not op_mini all"
+    ],
+    "proxy": [
+      "http://localhost:3001"
     ],
     "development": [
       "last 1 chrome version",
